<resources>
    <string name="games_no_start">未开始</string>
    <string name="foot_event">事件</string>
    <string name="foot_trend">走势</string>
    <string name="foot_statictics">统计</string>
    <string name="foot_event_goal">进球</string>
    <string name="foot_event_rc">红牌</string>
    <string name="foot_event_yc">黄牌</string>
    <string name="foot_event_ytor">两黄一红</string>
    <string name="foot_event_ychanger">两黄变一红</string>
    <string name="foot_event_player">换人</string>
    <string name="foot_event_corner">角球</string>
    <string name="foot_event_half">半场</string>
    <string name="foot_event_finish">全场</string>
    <string name="foot_event_penalty">点球</string>
    <string name="foot_event_di">第</string>
    <string name="foot_event_ge">个</string>
    <string name="foot_event_zhang">张</string>
    <string name="foot_event_nomatchstate">暂无比赛动态</string>
    <string name="foot_event_in">上场</string>
    <string name="foot_event_out">下场</string>
    <string name="foot_event_num_out">号下场</string>
    <string name="foot_event_num_in">号上场</string>
    <string name="matchIsNotStart">比赛暂未开始</string>
    <string name="goChat">走,先去聊聊</string>
    <string name="shot_nodata">暂无射正球门数据.</string>
    <string name="shotAside_nodata">暂无射偏球门数据.</string>
    <string name="dangerAttackk_nodata">暂无危险进攻数据.</string>
    <string name="attack_nodata">暂无进攻数据.</string>
    <string name="time">时间(T)</string>
    <string name="basket_info_hot">热门</string>
    <string name="basket_info_eur">欧洲</string>
    <string name="basket_info_america">美洲</string>
    <string name="basket_info_asia">亚洲</string>
    <string name="basket_info_africa">非洲</string>
    <string name="basket_info_inter">国际</string>
    <string name="basket_info_title">篮球资料库</string>
    <string name="basket_info_zhouji">洲际赛事</string>
    <string name="basket_info_country">国家赛事</string>
    <string name="basket_info_zhouji2">国际赛事</string>
    <string name="basket_info_shatan">沙滩赛事</string>
    <string name="football_info_title">足球资料库</string>
    <string name="football_info_oceania">大洋洲</string>
    <string name="foot_details_recommend">推介</string>
    <string name="foot_details_roolball">滚球</string>
    <string name="foot_details_talkball">聊球</string>
    <string name="foot_details_analyze">分析</string>
    <string name="foot_details_odds">指数</string>
    <string name="foot_details_statistics">直播</string>
    <string name="foot_details_time">时间</string>
    <string name="foot_details_score">比分</string>
    <string name="foot_details_home">主队</string>
    <string name="foot_details_ball">让球</string>
    <string name="foot_details_guest">客队</string>
    <string name="foot_details_livetitle">实况直播</string>
    <string name="jipan">即盘</string>
    <string name="chupan">初盘</string>
    <string name="alet_first">亚盘初盘:</string>
    <string name="asize_first">大小球初盘:</string>
    <string name="eu_first">欧赔初盘:</string>
    <string name="foot_details_live_tesxt">文字直播:</string>
    <string name="shoot">进攻</string>
    <string name="foot_details_live_msg">实况直播敬请关注!</string>
    <string name="foot_details_focus">关注</string>
    <string name="foot_details_focused">已关注</string>
    <string name="foot_details_share">分享</string>
    <string name="foot_odds_alet_left">主队</string>
    <string name="foot_odds_alet_middle">让球</string>
    <string name="foot_odds_alet_right">客队</string>
    <string name="foot_odds_asize_left">大球</string>
    <string name="foot_odds_asize_middle">盘口</string>
    <string name="foot_odds_asize_right">小球</string>
    <string name="foot_odds_eu_left">胜</string>
    <string name="foot_odds_eu_middle">平</string>
    <string name="foot_odds_eu_right">负</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="webchat">微信</string>
    <string name="friends">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="qzone">空间</string>
    <string name="sina">新浪</string>
    <string name="copy">复制链接</string>
    <string name="share_cancel">取消</string>
    <string name="share_summary">一比分,更新了比赛情报</string>
    <string name="share_to_qq_app_name">一比分</string>
    <string name="share_copy">复制链接成功</string>
    <string name="share_from">来自一比分:</string>
    <string name="share_uninstall_webchat">您还未安装微信客户端</string>
    <string name="weibosdk_demo_not_support_api_hint">您还未安装新浪微博客户端</string>
    <string name="share_uninstall_qq">您还未安装QQ客户端</string>
    <string name="share_recommend">推荐</string>
    <string name="share_summary_default">一比分,专业的足球比分直播平台</string>
    <string name="share_summary_new">一比分邀您一起去观看</string>
    <string name="share_match_pre">比赛前</string>
    <string name="share_match_live">比赛中</string>
    <string name="share_match_over">比赛后</string>
    <string name="share_match_live2">正在比赛中</string>
    <string name="share_match_browse">赛事一览</string>
    <string name="odd_plate_rb_txt">亚盘</string>
    <string name="odd_op_rb_txt">欧赔</string>
    <string name="odd_company_txt">公司</string>
    <string name="odd_home_txt">主队</string>
    <string name="odd_dish_txt">盘口</string>
    <string name="odd_guest_txt">客队</string>
    <string name="odd_time_txt">时间</string>
    <string name="symbol_times" translatable="false">×</string>
    <string name="symbol_plus" translatable="false">+</string>
    <string name="symbol_equal" translatable="false">=</string>
    <string name="label_line" translatable="false">-</string>
    <string name="odd_home_op_txt">主胜</string>
    <string name="odd_dish_op_txt">平局</string>
    <string name="odd_guest_op_txt">客胜</string>
    <string name="odd_home_big_txt">大球</string>
    <string name="odd_dish_big_txt">盘口</string>
    <string name="odd_guest_big_txt">小球</string>
    <string name="lineout_txt">界外球</string>
    <string name="free_hit_txt">危险任意球</string>
    <string name="away_txt">越位</string>
    <string name="foul_txt">犯规</string>
    <string name="trapping_txt">扑救</string>
    <string name="shoot_txt">射门</string>
    <string name="match_data_txt">比赛数据</string>
    <string name="danger_attack_txt">危险进攻</string>
    <string name="shoot_correct_txt">射正球门</string>
    <string name="shoot_miss_txt">射偏球门</string>
    <string name="live_text_txt">直播</string>
    <string name="first_players_txt">阵容</string>
    <string name="statistics_txt">统计</string>
    <string name="trend_txt">走势</string>
    <string name="data_statistics_txt">数据统计</string>
    <string name="nodata_txt">没有更多数据</string>
    <string name="loading_data_txt">正在加载中...</string>
    <string name="not_start_txt">未开</string>
    <string name="not_start_short_txt">未</string>
    <string name="pause_txt">中场</string>
    <string name="finish_txt">完场</string>
    <string name="finished_txt">完场</string>
    <string name="paused_txt">中场</string>
    <string name="matchFinished_txt">直播结束,谢谢您的观看!</string>
    <string name="fottball_home_jiashi">加时</string>
    <string name="fottball_home_dianqiu">点球</string>
    <string name="fottball_home_quxiao">取消</string>
    <string name="fottball_home_daiding">待定</string>
    <string name="fottball_home_yaozhan">腰斩</string>
    <string name="fottball_home_zhongduan">中断</string>
    <string name="fottball_home_tuichi">推迟</string>
    <string name="fottball_home_quxiaozhibo">取消直播</string>
    <string name="sound1">声音1</string>
    <string name="sound2">声音2</string>
    <string name="sound3">声音3</string>
    <string name="sound4">无</string>
    <string name="asialet">亚赔</string>
    <string name="euro">欧赔</string>
    <string name="asiasize">大小球</string>
    <string name="oddgone">不显示</string>
    <string name="about_product_msg_txt_simple">一比分，一直专注于体育比分的产品，目前比分、角球响应速度业内领先。</string>
    <string name="frame_home_jieguo_txt">彩票开奖</string>
    <string name="firsPlayers_not">暂无首发</string>
    <string name="homePlayers">主队名单</string>
    <string name="guestPlayers">客队名单</string>
    <string name="firsPlayers_rosters_homeTeam">主队名单</string>
    <string name="firsPlayers_rosters_visitingTeam">客队名单</string>
    <string name="homeTeam">主队 一</string>
    <string name="guestTeam">客队 一</string>
    <string name="homeBitmap">主队</string>
    <string name="guestBitmap">客队</string>
    <string name="attack">(攻防)</string>
    <string name="corner">(角球)</string>
    <string name="game_time">(时间)</string>
    <string name="app_name">一比分体育</string>
    <string name="menu_name">菜单</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">close_drawer</string>
    <string name="tip">日期选择</string>
    <string name="football">足球</string>
    <string name="help">帮助</string>
    <string name="internet_error">访问网络失败。</string>
    <string name="internet_exception">网络异常。</string>
    <string name="home_frame_txt">首页</string>
    <string name="football_frame_txt">足球比分</string>
    <string name="frame_home_video_txt">视频直播</string>
    <string name="frame_video_ing_txt">视频直播中</string>
    <string name="video_live_txt">请选择直播频道</string>
    <string name="live_txt">直播</string>
    <string name="number_frame_txt">彩票开奖</string>
    <string name="car_frame_txt">北京赛车</string>
    <string name="more_frame_txt">更多彩票</string>
    <string name="language_frame_txt">语言切换</string>
    <string name="version_update_txt">版本更新</string>
    <string name="about_frame_txt">关于我们</string>
    <string name="more_setting">更多设置</string>
    <string name="invited_prize">邀请有奖</string>
    <string name="login_int_username">请输入注册账号</string>
    <string name="can_only_choose_a_picture">亲，只能选择一张图片</string>
    <string name="foot_jishi_txt">即时</string>
    <string name="foot_saiguo_txt">赛果</string>
    <string name="foot_saicheng_txt">赛程</string>
    <string name="foot_guanzhu_txt">关注</string>
    <string name="foot_setting_txt">设置</string>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="about_confirm">确定</string>
    <string name="number_bjsc_sum_no1no2">冠亚和</string>
    <string name="number_bjsc_fz">分值</string>
    <string name="number_bjsc_dx">大小</string>
    <string name="number_bjsc_da">大</string>
    <string name="number_bjsc_ds">单双</string>
    <string name="number_bjsc_dan">单</string>
    <string name="number_bjsc_longhu">龙虎</string>
    <string name="number_bjsc_no1">冠军</string>
    <string name="number_bjsc_no2">亚军</string>
    <string name="number_bjsc_no3">第三名</string>
    <string name="number_bjsc_no4">第四名</string>
    <string name="number_bjsc_no5">第五名</string>
    <string name="number_tm_zf">总分</string>
    <string name="number_ssq_hqtj">红球统计</string>
    <string name="number_ssq_kd">跨度</string>
    <string name="number_ssq_job">奇偶比</string>
    <string name="number_ssq_dxb">大小比</string>
    <string name="number_ssq_zhb">质合比</string>
    <string name="number_ssq_qjb">区间比</string>
    <string name="number_info_sale">本期销量：</string>
    <string name="number_info_bonus_sum">奖金滚存：</string>
    <string name="number_info_prize">奖项</string>
    <string name="number_info_count">中奖注数(注)</string>
    <string name="number_info_bonus">单注奖金(元)</string>
    <string name="number_info_pl5_count">排列五直选</string>
    <string name="analyze_match">赛事</string>
    <string name="nodata">暂无数据</string>
    <string name="basket_analyze_dialog_site">场地</string>
    <string name="football_score">比分</string>
    <string name="input_password_old">请输入旧密码</string>
    <string name="input_password_new">请输入新密码(由6-16位数字和字符组成)</string>
    <string name="input_password_confirm">请保持和新密码一致</string>
    <string name="show_password">显示密码</string>
    <string name="tennis_datails_record_title">对手</string>
    <string name="foot_team_lineup_number">号码</string>
    <string name="foot_team_lineup_name">姓名</string>
    <string name="foot_team_lineup_nation">国籍</string>
    <string name="foot_team_lineup_position">位置</string>
    <string name="foot_team_lineup_birth">年龄</string>
</resources>