<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/whitesmoke"
    >

    <!--头部条目标题-->
    <include layout="@layout/layout_header" />

    <EditText
        android:id="@+id/et_password_old"
        android:layout_marginTop="15dp"
        style="@style/login_edittext_password_measured"
        android:hint="@string/input_password_old"
        />

    <EditText
        android:id="@+id/et_password_new"
        android:layout_marginTop="10dp"
        style="@style/login_edittext_password_measured"
        android:hint="@string/input_password_new"
        />

    <EditText
        android:id="@+id/et_password_confirm"
        android:layout_marginTop="10dp"
        style="@style/login_edittext_password_measured"
        android:hint="@string/input_password_confirm"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:button="@drawable/setting_rd"
        android:checked="false"
        android:paddingLeft="5dp"
        android:text="@string/show_password"
        android:textSize="13sp"
        />



    <TextView
        android:id="@+id/tv_comfirm"
        style="@style/login_edittext_loginbtn"
        android:layout_marginTop="30dp"
        android:text="@string/about_confirm"
        />


</LinearLayout>