<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- 北京赛车 -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/y40"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y180"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/number_tab_solid_all"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_bjsc_sum_no1no2"
                        android:gravity="center"
                        android:textColor="@color/title"
                        android:textSize="@dimen/number_title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        style="@style/number_text_style4"
                        android:textColor="@color/title"
                        android:text="@string/number_bjsc_fz" 
                        />

                    <TextView
                        style="@style/number_text_style5"
                        android:textColor="@color/title"
                        android:text="@string/number_bjsc_dx" 
                        />

                    <TextView
                        style="@style/number_text_style5"
                        android:textColor="@color/title"
                        android:text="@string/number_bjsc_ds" 
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/number_bjsc_fz"
                        style="@style/number_text_style3"
                        />

                    <TextView
                        android:id="@+id/number_bjsc_dx"
                        style="@style/number_text_style1"
                        android:text="@string/number_bjsc_da" />

                    <TextView
                        android:id="@+id/number_bjsc_ds"
                        style="@style/number_text_style1"
                        android:text="@string/number_bjsc_dan" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y300"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/number_tab_solid_all_l_b_r"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_bjsc_longhu"
                        android:gravity="center"
                        android:textColor="@color/title"
                        android:textSize="@dimen/number_title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        style="@style/number_text_style5"
                        android:textColor="@color/title"
                        android:text="@string/number_bjsc_no1" />

                    <TextView
                        style="@style/number_text_style5"
                        android:textColor="@color/title"
                        android:text="@string/number_bjsc_no2" />

                    <TextView
                        style="@style/number_text_style5"
                        android:textColor="@color/title"
                        android:text="@string/number_bjsc_no3" />

                    <TextView
                        style="@style/number_text_style5"
                        android:textColor="@color/title"
                        android:text="@string/number_bjsc_no4" />

                    <TextView
                        style="@style/number_text_style5"
                        android:textColor="@color/title"
                        android:text="@string/number_bjsc_no5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/number_bjsc_lh1"
                        style="@style/number_text_style1" />

                    <TextView
                        android:id="@+id/number_bjsc_lh2"
                        style="@style/number_text_style1" />

                    <TextView
                        android:id="@+id/number_bjsc_lh3"
                        style="@style/number_text_style1" />

                    <TextView
                        android:id="@+id/number_bjsc_lh4"
                        style="@style/number_text_style1" />

                    <TextView
                        android:id="@+id/number_bjsc_lh5"
                        style="@style/number_text_style1" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

</LinearLayout>