<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <!-- 排列5 -->

    <!--奖项-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/lottery_info_title"
                android:background="@drawable/number_tab_solid_all2"
                android:text="@string/number_info_prize" />

            <TextView
                style="@style/lottery_info_content_left"
                android:text="@string/number_info_pl5_count" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/lottery_info_title"
                android:text="@string/number_info_count" />

            <TextView
                android:id="@+id/lottery_pl5_count"
                style="@style/lottery_info_content_right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/lottery_info_title"
                android:text="@string/number_info_bonus" />

            <TextView
                android:id="@+id/lottery_pl5_bonus"
                style="@style/lottery_info_content_right" />

        </LinearLayout>
    </LinearLayout>

    <!--全国销量-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_info_sale" />

        <TextView
            android:id="@+id/lottery_pl5_sales_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/number_red" />

    </LinearLayout>

    <!--奖金滚存-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_info_bonus_sum" />

        <TextView
            android:id="@+id/lottery_pl5_bonus_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/number_red" />

    </LinearLayout>
</LinearLayout>