<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- 双色球 -->

    <include layout="@layout/number_bonus"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number_tab_solid_all"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/number_tm_zf"
                    android:textColor="@color/title"
                    android:textSize="@dimen/number_title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/number_text_style4"
                    android:text="@string/number_bjsc_fz"
                    android:textColor="@color/title" />

                <TextView
                    style="@style/number_text_style5"
                    android:text="@string/number_bjsc_ds"
                    android:textColor="@color/title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/number_ssq_fz"
                    style="@style/number_text_style3" />

                <TextView
                    android:id="@+id/number_ssq_ds"
                    style="@style/number_text_style1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number_tab_solid_all_l_b_r"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/number_ssq_hqtj"
                    android:textColor="@color/title"
                    android:textSize="@dimen/number_title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/number_text_style5"
                    android:text="@string/number_ssq_kd"
                    android:textColor="@color/title" />

                <TextView
                    style="@style/number_text_style5"
                    android:text="@string/number_ssq_job"
                    android:textColor="@color/title" />

                <TextView
                    style="@style/number_text_style5"
                    android:text="@string/number_ssq_dxb"
                    android:textColor="@color/title" />

                <TextView
                    style="@style/number_text_style5"
                    android:text="@string/number_ssq_zhb"
                    android:textColor="@color/title" />

                <TextView
                    style="@style/number_text_style5"
                    android:text="@string/number_ssq_qjb"
                    android:textColor="@color/title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/number_ssq_kd"
                    style="@style/number_text_style1" />

                <TextView
                    android:id="@+id/number_ssq_job"
                    style="@style/number_text_style1" />

                <TextView
                    android:id="@+id/number_ssq_dxb"
                    style="@style/number_text_style1" />

                <TextView
                    android:id="@+id/number_ssq_zhb"
                    style="@style/number_text_style1" />

                <TextView
                    android:id="@+id/number_ssq_qjb"
                    style="@style/number_text_style1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>