<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/setting_bg"
            android:padding="10dp">

            <TextView
                android:text="@string/foot_team_lineup_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/content_txt_dark_grad"
                android:textSize="@dimen/home_pager_title" />

            <TextView
                android:text="@string/foot_team_lineup_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/content_txt_dark_grad"
                android:textSize="@dimen/home_pager_title" />

            <TextView
                android:text="@string/foot_team_lineup_nation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/content_txt_dark_grad"
                android:textSize="@dimen/home_pager_title" />

            <TextView
                android:text="@string/foot_team_lineup_position"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/content_txt_dark_grad"
                android:textSize="@dimen/home_pager_title" />

            <TextView
                android:text="@string/foot_team_lineup_birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/content_txt_dark_grad"
                android:textSize="@dimen/home_pager_title" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/linecolor" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/team_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <include layout="@layout/network_exception" />

    <TextView
        android:id="@+id/tv_not_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/nodata"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/fl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</FrameLayout>
